# mindlogger-backend-refactor

./: .dockerignore  .env.default  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Jenkinsfile.groovy  LICENSE.MD  MFA_Testing_Collection.postman_collection.json  Makefile  Pipfile  README.md  alembic.ini  alembic_arbitrary.ini  buildspec.yaml  conftest.py  docker-compose.yaml  index.html  private.key  public.key  pyproject.toml  req.txt  uvicorn_disable_logging.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: _build.yaml  _deploy.yaml  _migrations.yaml  _notify-jira.yaml  _run_deploy.yaml  _setup.yaml  _uat-jira.yaml  branch-delete.yml  code_quality.yaml  coverage.yaml  create-preview-env.yaml  create_db.yaml  destroy-preview-env.yaml  drop_db.yaml  e2e-tests.yaml  env-name.yaml  fake_run_deploy_dev.yaml  feature-create.yml  feature-delete.yml  oasdif.yaml  pr-close.yml  pr-open.yml  run_build.yaml  run_build_deploy.yaml  run_build_deploy_dev.yaml  run_build_deploy_dr.yaml  run_build_deploy_prod.yaml  run_build_deploy_uat.yaml  run_deploy_dev.yaml  run_deploy_prod.yaml  run_deploy_staging.yaml  run_deploy_test.yaml  run_deploy_uat.yaml  taf-api-tests.yaml  tests.yaml  update-jira-tickets.yaml
10/: index.html
10/export/: influxDbData.txt
12/: index.html
12/export/: influxDbData.txt
13/: index.html
13/export/: influxDbData.txt
14/: index.html
14/export/: influxDbData.txt
21/: index.html
21/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
21/export/: influxDbData.txt  prometheusData.txt
21/history/: history.json  retry-trend.json
21/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  history-trend.json  severity.json  summary.json
22/: index.html
22/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
22/export/: influxDbData.txt  prometheusData.txt
22/history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
22/widgets/: categories-trend.json  duration.json  executors.json  severity.json  summary.json
23/: index.html
23/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
23/export/: influxDbData.txt  prometheusData.txt
23/history/: categories-trend.json  history-trend.json  history.json
23/widgets/: duration-trend.json  (+5 more)
24/: index.html
25/: index.html
26/: index.html
27/: index.html
29/: index.html
3/: index.html
30/: index.html
32/: index.html
33/: index.html
34/: index.html
35/: index.html
37/: index.html
38/: index.html
39/: index.html
4/: index.html
42/: index.html
44/: index.html
45/: index.html
46/: index.html
47/: index.html
48/: index.html
49/: index.html
5/: index.html
50/: index.html
501/: index.html
502/: index.html
503/: index.html
507/: index.html
508/: index.html
509/: index.html
511/: index.html
515/: index.html
520/: index.html
522/: index.html
523/: index.html
524/: index.html
525/: index.html
533/: index.html
552/: index.html
554/: index.html
556/: index.html
562/: index.html
563/: index.html
565/: index.html
566/: index.html
567/: index.html
568/: index.html
569/: index.html
572/: index.html
573/: index.html
574/: index.html
575/: index.html
576/: index.html
577/: index.html
578/: index.html
58/: index.html
584/: index.html
588/: index.html
59/: index.html
591/: index.html
595/: index.html
596/: index.html
599/: index.html
602/: index.html
603/: index.html
604/: index.html
605/: index.html
610/: index.html
611/: index.html
612/: index.html
613/: index.html
615/: index.html
616/: index.html
617/: index.html
619/: index.html
62/: index.html
620/: index.html
621/: index.html
622/: index.html
623/: index.html
624/: index.html
625/: index.html
626/: index.html
627/: index.html
628/: index.html
629/: index.html
630/: index.html
631/: index.html
632/: index.html
633/: index.html
634/: index.html
635/: index.html
636/: index.html
637/: index.html
638/: index.html
639/: index.html
640/: index.html
641/: index.html
642/: index.html
643/: index.html
644/: index.html
645/: index.html
646/: index.html
647/: index.html
648/: index.html
649/: index.html
650/: index.html
651/: index.html
652/: index.html
653/: index.html
654/: index.html
655/: index.html
656/: index.html
658/: index.html
659/: index.html
660/: index.html
661/: index.html
662/: index.html
663/: index.html
665/: index.html
666/: index.html
667/: index.html
668/: index.html
670/: index.html
672/: index.html
673/: index.html
674/: index.html
680/: index.html
681/: index.html
683/: index.html
687/: index.html
690/: index.html
691/: index.html
692/: index.html
693/: index.html
694/: index.html
695/: index.html
696/: index.html
697/: index.html
698/: index.html
699/: index.html
7/: index.html
700/: index.html
701/: index.html
702/: index.html
703/: index.html
704/: index.html
706/: index.html
709/: index.html
712/: index.html
715/: index.html
716/: index.html
717/: index.html
718/: index.html
719/: index.html
720/: index.html
721/: index.html
722/: index.html
723/: index.html
724/: index.html
725/: index.html
726/: index.html
727/: index.html
728/: index.html
729/: index.html
730/: index.html
8/: index.html
9/: index.html
collections/: Test Data Delete Generated.bru  Test Data Generate.bru  bruno.json  collection.bru  package-lock.json  package.json
copilot/: .workspace
docs/: alembic.md  arbitrary.md  cli.md  db.md  error-codes.md  etc.md  git.md  pycharm.md  storage.md  tests.md  tokens.md
e2e/: index.html
last-history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
src/: broker.py  cli.py  consumer.py  datadog.py  export_spec.py  main.py  registry.py  scheduler.py  worker.py
unit/: index.html
(+2041907 files in other folders)
